fix code, add GUI option

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -42,6 +42,48 @@
             "presentation": {
                 "reveal": "silent"
             }
+        },
+        {
+            "taskName": "Build (debug, GUI)",
+            "group": "build",
+            "type": "shell",
+            "command": "rd /S /Q build && mkdir build && cmake -G Ninja -DCMAKE_BUILD_TYPE=Debug -DUSE_MESSAGEBOX_GUI=Yes && ninja",
+            "problemMatcher": {
+                "owner": "cpp",
+                "fileLocation": ["relative", "${workspaceRoot}"],
+                "pattern": {
+                    "regexp": "^(.*):(\\d+):(\\d+):\\s+(warning|error):\\s+(.*)$",
+                    "file": 1,
+                    "line": 2,
+                    "column": 3,
+                    "severity": 4,
+                    "message": 5
+                }
+            },
+            "presentation": {
+                "reveal": "silent"
+            }
+        },
+        {
+            "taskName": "Build (release, GUI)",
+            "group": "build",
+            "type": "shell",
+            "command": "rd /S /Q build && mkdir build && cmake -G Ninja -DCMAKE_BUILD_TYPE=Release -DUSE_MESSAGEBOX_GUI=Yes && ninja",
+            "problemMatcher": {
+                "owner": "cpp",
+                "fileLocation": ["relative", "${workspaceRoot}"],
+                "pattern": {
+                    "regexp": "^(.*):(\\d+):(\\d+):\\s+(warning|error):\\s+(.*)$",
+                    "file": 1,
+                    "line": 2,
+                    "column": 3,
+                    "severity": 4,
+                    "message": 5
+                }
+            },
+            "presentation": {
+                "reveal": "silent"
+            }
         }
     ]
 }
