--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,10 +2,19 @@
     // https://code.visualstudio.com/docs/editor/tasks#_defining-a-problem-matcher - GCC config
     "version": "2.0.0",
     "tasks": [{
+            "taskName": "mkdir build",
+            "group": "build",
+            "type": "shell",
+            "command": "mkdir build",
+            "presentation": {
+                "reveal": "silent"
+            }
+        },
+        {
             "taskName": "Build (debug)",
             "group": "build",
             "type": "shell",
-            "command": "rd /S /Q build && mkdir build && cmake -G Ninja -DCMAKE_BUILD_TYPE=Debug && ninja",
+            "command": "del build\\*.exe && cmake -G Ninja -DCMAKE_BUILD_TYPE=Debug && ninja && 7z a -tzip build\\debug.zip build\\*.exe -mx9",
             "problemMatcher": {
                 "owner": "cpp",
                 "fileLocation": ["relative", "${workspaceRoot}"],
@@ -26,7 +35,7 @@
             "taskName": "Build (release)",
             "group": "build",
             "type": "shell",
-            "command": "rd /S /Q build && mkdir build && cmake -G Ninja -DCMAKE_BUILD_TYPE=Release && ninja",
+            "command": "del build\\*.exe && cmake -G Ninja -DCMAKE_BUILD_TYPE=Release && ninja && 7z a -tzip build\\release.zip build\\*.exe -mx9",
             "problemMatcher": {
                 "owner": "cpp",
                 "fileLocation": ["relative", "${workspaceRoot}"],
@@ -47,7 +56,7 @@
             "taskName": "Build (debug, GUI)",
             "group": "build",
             "type": "shell",
-            "command": "rd /S /Q build && mkdir build && cmake -G Ninja -DCMAKE_BUILD_TYPE=Debug -DUSE_MESSAGEBOX_GUI=Yes && ninja",
+            "command": "del build\\*.exe && cmake -G Ninja -DCMAKE_BUILD_TYPE=Debug -DUSE_MESSAGEBOX_GUI=Yes && ninja && 7z a -tzip build\\debug-gui.zip build\\*.exe -mx9",
             "problemMatcher": {
                 "owner": "cpp",
                 "fileLocation": ["relative", "${workspaceRoot}"],
@@ -68,7 +77,7 @@
             "taskName": "Build (release, GUI)",
             "group": "build",
             "type": "shell",
-            "command": "rd /S /Q build && mkdir build && cmake -G Ninja -DCMAKE_BUILD_TYPE=Release -DUSE_MESSAGEBOX_GUI=Yes && ninja",
+            "command": "del build\\*.exe && cmake -G Ninja -DCMAKE_BUILD_TYPE=Release -DUSE_MESSAGEBOX_GUI=Yes && ninja && 7z a -tzip build\\release-gui.zip build\\*.exe -mx9",
             "problemMatcher": {
                 "owner": "cpp",
                 "fileLocation": ["relative", "${workspaceRoot}"],
